--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,11 @@
   src: url("../fonts/BG/BrandonGrotesque-Bold.ttf");
 }
 
+@font-face {
+  font-family: bg-light;
+  src: url("../fonts/BG/BrandonGrotesque-Light.ttf");
+}
+
 body {
   margin: 0;
   font-family: bg;
@@ -27,7 +32,12 @@ hr {
   background-color: #d444d4;
   box-shadow: rgb(190, 190, 190) 2px 1px 5px;
   width: 90%;
-  margin-top: 20px;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+a {
+  color: #d444d4;
 }
 
 nav {
@@ -40,6 +50,33 @@ nav {
 
 nav > ul {
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(199, 199, 199);
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #d444d4;
+  cursor: pointer;
+  transition: .5s;
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #8a3b75;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -58,7 +95,73 @@ nav > ul {
   color: #bd3787;
 }
 
+.active {
+  color: #bd3787;
+}
+
 .tameshk {
   width: 60px;
   height: 75px;
+}
+
+/* Member card */
+.members {
+  width: 85%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.card {
+  box-shadow: gray 2px 2px 10px;
+  text-align: center;
+  width: 25%;
+  border-radius: 7px;
+  padding: 10px;
+  margin-right: 20px;
+  transition: .5s;
+}
+
+.card:hover {
+  box-shadow: gray 10px 10px 10px;
+}
+
+.member-image {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  border: #8a3b75 solid 2px;
+}
+
+.member-name {
+  font-family: bg-bold;
+}
+
+.member-type {
+  margin-top: -20px;
+}
+
+.member-desc {
+  font-family: bg-light;
+}
+
+.footer {
+  text-align: center;
+  background-color: #2c3157;
+  color: white;
+  padding: 10px;
+}
+
+.love {
+  width: 20px;
+  height: 20px;
+  margin-bottom: -5px;
+}
+
+.sina-yeganeh {
+  font-family: bg-bold;
+  text-decoration: underline solid #d444d4;
 }
